# controller/user.go
@@ -25,15 +25,9 @@ var (
 //	@name			UserRegisterHandler
 //	@Accept			json
 //	@Produce		json
-<<<<<<< Updated upstream
-//	@Param			walletAccount	string	true	walletAccount
-//	@Param			nickName		string	true	nickName
-//	@Param			password		string	true	password
-=======
-//	@Param			walletAccount path  string true 	"walletAccount"
-//	@Param			nickName	path	string	true	"nickName"
-//	@Param			password	path	string	true	"password"
->>>>>>> Stashed changes
+//	@Param			walletAccount	path 	string	true	"walletAccount"
+//	@Param			nickName		path	string	true	"nickName"
+//	@Param			password		path	string	true	"password"
 //	@Router			/v01/acc/register [post]
 //	@Success		200	{object}	string
 func (p *Controller) UserRegisterHandler(c *gin.Context) {
@@ -66,13 +60,8 @@ func (p *Controller) UserRegisterHandler(c *gin.Context) {
 //	@name			UserEditHandler
 //	@Accept			json
 //	@Produce		json
-<<<<<<< Updated upstream
-//	@Param			walletAccount	string	true	walletAccount
-//	@Param			nickName		string	true	nickName
-=======
 //	@Param			walletAccount path  string true 	"walletAccount"
 //	@Param			nickName	path	string	true	"nickName"
->>>>>>> Stashed changes
 //	@Router			/v01/acc/nickname [post]
 //	@Success		200	{object}	string
 func (p *Controller) UserEditHandler(c *gin.Context) {
@@ -102,13 +91,8 @@ func (p *Controller) UserEditHandler(c *gin.Context) {
 //	@name			UserProfileHandler
 //	@Accept			json
 //	@Produce		json
-<<<<<<< Updated upstream
-//	@Param			walletAccount	string	true	walletAccount
-//	@Param			nickName		string	true	nickName
-=======
 //	@Param			walletAccount path  string true 	"walletAccount"
-//	@Param			nickName path		string	true	"nickName"
->>>>>>> Stashed changes
+//	@Param			nickName		 path		string	true	"nickName"
 //	@Router			/v01/acc/profile [get]
 //	@Success		200	{object}	string
 func (p *Controller) UserProfileHandler(c *gin.Context) {
